src/raylib/RayLib3.pas


  // Draw a Texture2D
  DrawTexture: procedure(texture: TTexture2D; posX: Integer; posY: Integer; tint: TColor); cdecl;
  // Draw a Texture2D with position defined as Vector2
  DrawTextureV: procedure(texture: TTexture2D; position: TVector2; tint: TColor); cdecl;
  // Draw a Texture2D with extended parameters
  DrawTextureEx: procedure(texture: TTexture2D; position: TVector2; rotation: Single; scale: Single; tint: TColor); cdecl;
  // Draw a part of a texture defined by a rectangle
  DrawTextureRec: procedure(texture: TTexture2D; source: TRectangle; position: TVector2; tint: TColor); cdecl;
  // Draw texture quad with tiling and offset parameters
  DrawTextureQuad: procedure(texture: TTexture2D; tiling: TVector2; offset: TVector2; quad: TRectangle; tint: TColor); cdecl;
  // Draw part of a texture (defined by a rectangle) with rotation and scale tiled into dest.
  DrawTextureTiled: procedure(texture: TTexture2D; source: TRectangle; dest: TRectangle; origin: TVector2; rotation: Single; Scale: Single; tint: TColor); cdecl;
  // Draw a part of a texture defined by a rectangle with 'pro' parameters
  DrawTexturePro: procedure(texture: TTexture2D; source: TRectangle; dest: TRectangle; origin: TVector2; rotation: Single; tint: TColor); cdecl;
  // Draws a texture (or part of it) that stretches or shrinks nicely
  DrawTextureNPatch: procedure(texture: TTexture2D; nPatchInfo: TNPatchInfo; dest: TRectangle; origin: TVector2; rotation: Single; tint: TColor); cdecl;

  { Image/Texture misc functions }


  { Color-related functions }

  // Color fade-in or fade-out, alpha goes from 0.0f to 1.0f
  Fade: function(color: TColor; Alpha: Single): TColor; cdecl;
  // Returns hexadecimal value for a Color
  ColorToInt: function(color: TColor): Integer; cdecl;
  // Returns color normalized as float [0..1]
  ColorNormalize: function(color: TColor): TVector4; cdecl;
  // Returns color from normalized values [0..1]
  ColorFromNormalized: function(normalized: TVector4): TColor; cdecl;
  // Returns HSV values for a Color
  ColorToHSV: function(color: TColor): TVector3; cdecl;
  // Returns a Color from HSV values
  ColorFromHSV: function(hsv: TVector3): TColor; cdecl;
  // Returns color with alpha applied, alpha goes from 0.0f to 1.0f
  ColorAlpha: function(color: TColor; Alpha: Single): TColor; cdecl;
  // Returns src alpha-blended into dst color with tint
  ColorAlphaBlend: function(dst, src, tint: TColor): TColor; cdecl;
  // Returns a Color struct from hexadecimal value
  GetColor: function(hexValue: Integer): TColor; cdecl;
  // Get Color from a source pixel pointer of certain format
  GetPixelColor: function(srcPtr: Pointer; format: Integer): TColor; cdecl;
  // Set color formatted into destination pixel pointer
  SetPixelColor: function(dstPtr: Pointer; Color: TColor; format: Integer): TColor; cdecl;
  // Get pixel data size in bytes (image or texture)
  GetPixelDataSize: function(width: Integer; height: Integer; format: Integer): Integer; cdecl;

//------------------------------------------------------------------------------------
// Font Loading and Text Drawing Functions (Module: text)
//------------------------------------------------------------------------------------

  { Font loading/unloading functions }

  // Get the default Font
  GetFontDefault: function: TFont; cdecl;
  // Load font from file into GPU memory (VRAM)
  LoadFont: function(const fileName: PUTF8Char): TFont; cdecl;
  // Load font from file with extended parameters
  LoadFontEx: function(const fileName: PUTF8Char; fontSize: Integer; fontChars: PInteger; charsCount: Integer): TFont; cdecl;
  // Load font from Image (XNA style)
  LoadFontFromImage: function(image: TImage; key: TColor; firstChar: Integer): TFont; cdecl;
  // Load font from memory buffer, fileType refers to extension: i.e. "ttf"
  LoadFontFromMemory: function(const fileType: PUTF8Char; fileData: PByte; dataSize: Integer; fontSize: Integer; fontChars: PInteger; charsCount: Integer): TFont; cdecl;
  // Load font data for further use
  LoadFontData: function(fileData: PByte; dataSize, fontSize: Integer; fontChars: PInteger; charsCount: Integer; &type: Integer): PCharInfo; cdecl;
  // Generate image font atlas using chars info
  GenImageFontAtlas: function(const chars: PCharInfo; recs: PPRectangle; charsCount: Integer; fontSize: Integer; padding: Integer; packMethod: Integer): TImage; cdecl;
  // Unload font chars info data (RAM)
  UnloadFontData: procedure(fileData: PByte; charsCount: Integer); cdecl;
  // Unload Font from GPU memory (VRAM)
  UnloadFont: procedure(font: TFont); cdecl;

  { Text drawing functions }

  // Shows current FPS
  DrawFPS: procedure(posX: Integer; posY: Integer); cdecl;
  // Draw text (using default font)
  DrawText: procedure(const Text: PUTF8Char; posX: Integer; posY: Integer; FontSize: Integer; Color: TColor); cdecl;
  // Draw text using font and additional parameters
  DrawTextEx: procedure(font: TFont; const text: Pointer; position: TVector2; fontSize: Single; spacing: Single; tint: TColor); cdecl;
  // Draw text using font inside rectangle limits
  DrawTextRec: procedure(font: TFont; const text: PUTF8Char; rec: TRectangle; fontSize: Single; spacing: Single; wordWrap: Boolean; tint: TColor); cdecl;
  DrawTextRecEx: procedure(font: TFont; const text: PUTF8Char; rec: TRectangle; fontSize: Single; spacing: Single; wordWrap: Boolean; tint: TColor; selectStart: Integer; selectLength: Integer; selectTint: TColor; selectBackTint: TColor); cdecl;

  // Draw text using font inside rectangle limits with support for text selection
  DrawTextCodepoint: procedure(font: TFont; codepoint: Integer; position: TVector2; fontSize: Single; tint: TColor); cdecl;

  { Text misc. functions }

  // Measure string width for default font
  MeasureText: function(const text: PUTF8Char; fontSize: Integer): Integer; cdecl;
  // Measure string size for Font
  MeasureTextEx: function(font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single): TVector2; cdecl;
  // Get index position for a unicode character on font
  GetGlyphIndex: function(font: TFont; codepoint: Integer): Integer; cdecl;

  { Text strings management functions (no utf8 strings, only byte chars) }
  // NOTE: Some strings allocate memory internally for returned strings, just be careful!

  // Copy one string to another, returns bytes copied
  TextCopy: function(dst: PUTF8Char; const src: PUTF8Char): Integer; cdecl;
  // Check if two text string are equal
  TextIsEqual: function(const text1: PUTF8Char; const text2: PUTF8Char): Boolean; cdecl;
  // Get text length, checks for '\0' ending
  TextLength: function(const text: PUTF8Char): Cardinal; cdecl;
  // Text formatting with variables (sprintf style)
  TextFormat: function(const text: PUTF8Char): PUTF8Char varargs; cdecl;
  // Get a piece of a text string
  TextSubtext: function(const text: PUTF8Char; position: Integer; length: Integer): PUTF8Char; cdecl;
  // Replace text string (memory must be freed!)
  TextReplace: function(text: PUTF8Char; const replace: PUTF8Char; const by: PUTF8Char): PUTF8Char; cdecl;
  // Insert text in a position (memory must be freed!)
  TextInsert: function(const text: PUTF8Char; const insert: PUTF8Char; position: Integer): PUTF8Char; cdecl;
  // Join text strings with delimiter
  TextJoin: function(textList: PPUTF8Char; count: Integer; const delimiter: PUTF8Char): PUTF8Char; cdecl;
  // Split text into multiple strings
  TextSplit: function(const text: PUTF8Char; delimiter: UTF8Char; count: PInteger): PPUTF8Char; cdecl;
  // Append text at specific position and move cursor!
  TextAppend: procedure(text: PUTF8Char; const append: PUTF8Char; position: PInteger); cdecl;
  // Find first text occurrence within a string
  TextFindIndex: function(const text: PUTF8Char; const find: PUTF8Char): Integer; cdecl;
  // Get upper case version of provided string
  TextToUpper: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get lower case version of provided string
  TextToLower: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get Pascal case notation version of provided string
  TextToPascal: function(const text: PUTF8Char): PUTF8Char; cdecl;
  // Get integer value from text (negative values not supported)
  TextToInteger: function(const text: PUTF8Char): Integer; cdecl;
  // Encode text codepoint into utf8 text (memory must be freed!)
  TextToUtf8: function(codepoints: PInteger; length: Integer): PUTF8Char; cdecl;

  { UTF8 text strings management functions }

  // Get all codepoints in a string, codepoints count returned by parameters
  GetCodepoints: function(const text: PUTF8Char; count: PInteger): PInteger; cdecl;
  // Get total number of characters (codepoints) in a UTF8 encoded string
  GetCodepointsCount: function(const text: PUTF8Char): Integer; cdecl;
  // Returns next codepoint in a UTF8 encoded string; 0x3f('?') is returned on failure
  GetNextCodepoint: function(const text: PUTF8Char; bytesProcessed: PInteger): Integer; cdecl;
  // Encode codepoint into utf8 text (char array length returned as parameter)
  CodepointToUtf8: function(codepoint: Integer; byteLength: PInteger): PUTF8Char; cdecl;

//------------------------------------------------------------------------------------
// Basic 3d Shapes Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

  { Basic geometric 3D shapes drawing functions }
